test/cli/test-mutating-policy/exceptions-mutate-deployment/exception.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: PolicyException
metadata:
  name: exclude-namespace
spec:
  policyRefs:
  - name: "test-mpol-jsonpatch"
    kind: MutatingPolicy
  matchConditions:
    - name: "check-namespace"
      expression: "object.metadata.namespace != 'dev'"
