test/cli/test-mutating-policy/exceptions-mutate-deployment/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
exceptions:
- exception.yaml
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resource.yaml
results:
- isMutatingPolicy: true
  kind: Deployment
  policy: test-mpol-jsonpatch
  patchedResources: patchedResource.yaml
  resources:
  - dev/dev-deploy-2
  result: pass
- isMutatingPolicy: true
  kind: Deployment
  policy: test-mpol-jsonpatch
  resources:
  - default/dev-deploy-1
  result: skip
